@@ -5,7 +5,7 @@ swarm_exec_prefix=@swarm_exec_prefix@
 swarm_datadir=@swarm_datadir@
 jdkdir=@jdkdir@
 
-@SHLIBPATH_VAR@=`cat << EOF | sort 2>/dev/null | uniq | tr '\012' '@PATHSEP@'
+@SHLIBPATH_VAR@=`cat << EOF | sort 2>/dev/null | uniq | tr '\012' ':'
 @swarm_libdir@
 @xpmlibdir@
 @tcllibdir@
@@ -18,17 +18,17 @@ EOF`$@SHLIBPATH_VAR@
 
 
 JAVALIBS=@JAVALIBS@
-JAVACLASSES=@JAVACLASSES@
+JAVACLASSES='@JAVACLASSES@'
 JAVAENV=@JAVAENV@
 JAVACMD=@JAVACMD@
 
-@JAVALIBPATH_VAR@=@swarm_libdir@:@JAVALIBS@
+@JAVALIBPATH_VAR@="@swarm_libdir@:@JAVALIBS@"
 export @SHLIBPATH_VAR@ @JAVALIBPATH_VAR@
 
 JAVA_CLASSES_INSTALLED_AS=@JAVA_CLASSES_INSTALLED_AS@
 
 if test x$JAVA_CLASSES_INSTALLED_AS = xjar; then
-  classpath=".@PATHSEP@${swarm_datadir}/swarm/swarm.jar@PATHSEP@${JAVACLASSES}@PATHSEP@$CLASSPATH"
+  classpath=".@PATHSEP@${swarm_datadir}@PATHDELIM@swarm@PATHDELIM@swarm.jar@PATHSEP@${JAVACLASSES}@PATHSEP@$CLASSPATH"
 else
   classpath=".@PATHSEP@${swarm_datadir}@PATHSEP@${JAVACLASSES}@PATHSEP@$CLASSPATH"
 fi
